sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	var y=1
	while (y!=0){
		for(i<-0 to x.length-2){
			if (plusPetitQue(i+1,i)==true){
				echange(i+1,i)
				y=y+1
			}
		}
	}
}
